src/objects/Project_Task__c.object
<CustomObject>
    <description>This Object is used to store the Tasks assigned for a Project</description>
    <fields>
        <fullName>Acc_Hours__c</fullName>
        <label>Accumulated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Bid_Amount__c</fullName>
        <label>Accepted Bid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accepted_Bid_Hours__c</fullName>
        <label>Accepted Bid Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accumulated_Time_Logs__c</fullName>
        <label>Accumulated Time Logs</label>
        <summarizedField>Time_Log__c.Week_total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Log__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Log__c.Tasks__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Expenditure__c</fullName>
        <label>Actual Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_Consumed__c</fullName>
        <label>Actual Hours Consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocated_Budget__c</fullName>
        <label>Allocated Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Days__c</fullName>
        <label>Allocated Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocated_Hours__c</fullName>
        <label>Allocated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Change_Order_Budget__c</fullName>
        <label>Approved Change Order Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_to_Finish__c</fullName>
        <formula>Scheduled_Value__c  -  Total_Finished_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance to Finish</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check List</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Check_List_Header__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Check_List_Header__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Exp__c</fullName>
        <label>Current Expenditure</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Milestone_Value__c</fullName>
        <label>Current Milestone Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Milestone__c</fullName>
        <label>Current Milestone %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Profit__c</fullName>
        <inlineHelpText>Estimated Profit for the Related Task Team Member</inlineHelpText>
        <label>Estimated Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the task is outsourced or taken over by McQuay</description>
        <inlineHelpText>If yes  the is outsourced to Vendors , If no task is taken over by McQuay</inlineHelpText>
        <label>External Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Sub_Task_wk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sub Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSTaskGUID__c</fullName>
        <description>This field stores MS Project task GUID. Used for the MS Project AddOn.</description>
        <label>MSTaskGUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone Billing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked the time log for this task shoud NOT be sent for billing.</description>
        <inlineHelpText>If Checked the time log for this task shoud NOT be sent for billing.</inlineHelpText>
        <label>Non - Billable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Allocated_Budget__c</fullName>
        <description>Original Budget is locked down</description>
        <label>Original Allocated Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Sub Tasks</relationshipLabel>
        <relationshipName>Feature_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Preceeding_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Task to be completed before the task</description>
        <label>Preceeding Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Follow Up Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Milestone__c</fullName>
        <label>Previous Milestones Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Milestones__c</fullName>
        <label>Previous Milestones %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Retainage__c</fullName>
        <label>Retainage %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retainer_Value__c</fullName>
        <formula>Retainage__c  *  Scheduled_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retainage Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Value__c</fullName>
        <label>Scheduled Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Color_Coding__c</fullName>
        <formula>IF(
 Allocated_Hours__c &lt;  Acc_Hours__c ,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold_1__c</fullName>
        <defaultValue>0.7</defaultValue>
        <inlineHelpText>Email will be sent when the Expenditure or Hours spent reach the threshold specified</inlineHelpText>
        <label>Threshold 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Threshold_2__c</fullName>
        <defaultValue>0.85</defaultValue>
        <description>Email will be sent when the Expenditure or Hours spent reach the threshold specified</description>
        <label>Threshold 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Threshold_3__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Email will be sent when the Expenditure or Hours spent reach the threshold specified</description>
        <label>Threshold 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Accumulated_Hrs_for_Sub_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Accumulated Hrs for Sub-Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Allocated_hours_for_sub_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Allocated hours for sub Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Current_Expenditure_for_Sub_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Current Expenditure for Sub Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Finished_Value__c</fullName>
        <formula>Prev_Milestone__c  +  Current_Milestone_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Finished Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Finished__c</fullName>
        <formula>Previous_Milestones__c  +  Current_Milestone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Finished %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_allocated_Budget_from_Sub_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total allocated Budget from Sub Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Tasks</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <recordTypes>
        <fullName>Milestone</fullName>
        <active>true</active>
        <description>A milestone during a phase of a project. Can be realted to billing schedules.</description>
        <label>Milestone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Task</fullName>
        <active>true</active>
        <description>A standard project task or project line item.</description>
        <label>Project Task</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>